--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Satrio</title>
 </head>
 <body>
-    
+    <div>
+        <h1>About Me</h1>
+        <p>
+            Name : Satrio <br/>
+            Email : satriopapudi290@gmail.com <br/>
+        </p>
+    </div>
 </body>
 </html>
